--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -199,7 +199,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.5.BUILD-SNAPSHOT
+      version: 5.0.5.RELEASE
       modules:
         - spring-aop
         - spring-aspects
