Check out the correct branch of Spring Integration

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -247,6 +247,7 @@ platform_definition:
       groupId: org.springframework.integration
       version: 4.3.15.BUILD-SNAPSHOT
       build:
+        checkout: '4.3.x'
         compileWith: jdk8
         runTestsWith:
           - jdk8
