--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -14,7 +14,7 @@ platform_definition:
         - reactor-core
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.2.RELEASE
+      version: 2.0.3.RELEASE
       modules:
         - spring-amqp
         - spring-rabbit
@@ -117,84 +117,83 @@ platform_definition:
         - spring-cloud-spring-service-connector
       build:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
-        checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.6.BUILD-SNAPSHOT
+      version: 3.0.6.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.6.BUILD-SNAPSHOT
+      version: 3.0.6.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data GemFire
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data Geode
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-geode
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.6.BUILD-SNAPSHOT
+      version: 5.0.6.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.6.BUILD-SNAPSHOT
+      version: 2.0.6.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.6.BUILD-SNAPSHOT
+      version: 3.0.6.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.6.BUILD-SNAPSHOT
+      version: 3.0.6.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
@@ -229,9 +228,8 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.4.BUILD-SNAPSHOT
+      version: 5.0.4.RELEASE
       build:
-        checkout: 5.0.x
         compileWith: jdk8
         runTestsWith:
           - jdk8
@@ -273,7 +271,7 @@ platform_definition:
         - spring-integration-zookeeper
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.1.4.RELEASE
+      version: 2.1.5.RELEASE
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -304,7 +302,7 @@ platform_definition:
         - spring-plugin-metadata
     - name: Spring REST Docs
       groupId: org.springframework.restdocs
-      version: 2.0.1.BUILD-SNAPSHOT
+      version: 2.0.1.RELEASE
       modules:
         - spring-restdocs-asciidoctor
         - spring-restdocs-core
@@ -320,7 +318,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.4.BUILD-SNAPSHOT
+      version: 5.0.4.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -814,6 +812,8 @@ platform_definition:
       - 'org.jooq:jooq-codegen'
       - 'org.jooq:jooq-meta'
       - 'org.junit.jupiter:junit-jupiter-engine'
+      - 'org.junit.jupiter:junit-jupiter-params'
+      - 'org.junit.vintage:junit-vintage-engine'
       - 'org.mariadb.jdbc:mariadb-java-client'
       - 'org.mockito:mockito-inline'
       - 'org.mongodb:bson'
@@ -853,7 +853,7 @@ platform_definition:
     'com.nimbusds:oauth2-oidc-sdk': '5.57'
     'net.sourceforge.htmlunit:htmlunit': '2.30'
     'org.apache.logging.log4j:log4j-api': '2.11.0'
-    'org.aspectj:aspectjrt': '1.9.0.RC2'
+    'org.aspectj:aspectjrt': '1.9.0'
     'org.seleniumhq.selenium:htmlunit-driver': '2.30.0'
     'org.yaml:snakeyaml': '1.20'
     'javax.servlet:javax.servlet-api': '4.0.0'
