--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -63,7 +63,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.12.RELEASE
+      version: 1.5.13.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -140,53 +140,53 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.11.RELEASE
+      version: 1.5.12.BUILD-SNAPSHOT
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.11.RELEASE
+      version: 1.13.12.BUILD-SNAPSHOT
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.11.RELEASE
+      version: 2.2.12.BUILD-SNAPSHOT
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.11.RELEASE
+      version: 2.1.12.BUILD-SNAPSHOT
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.11.RELEASE
+      version: 1.1.12.BUILD-SNAPSHOT
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.11.RELEASE
+      version: 1.9.12.BUILD-SNAPSHOT
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.11.RELEASE
+      version: 1.11.12.BUILD-SNAPSHOT
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.11.RELEASE
+      version: 1.2.12.BUILD-SNAPSHOT
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.11.RELEASE
+      version: 1.0.12.BUILD-SNAPSHOT
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.11.RELEASE
+      version: 1.10.12.BUILD-SNAPSHOT
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -194,29 +194,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.11.RELEASE
+      version: 4.2.12.BUILD-SNAPSHOT
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.11.RELEASE
+      version: 1.8.12.BUILD-SNAPSHOT
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.11.RELEASE
+      version: 2.6.12.BUILD-SNAPSHOT
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.11.RELEASE
+      version: 2.1.12.BUILD-SNAPSHOT
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.16.RELEASE
+      version: 4.3.17.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -245,7 +245,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.15.RELEASE
+      version: 4.3.16.BUILD-SNAPSHOT
       build:
         checkout: '4.3.x'
         compileWith: jdk8
@@ -737,7 +737,6 @@ platform_definition:
       - 'org.glassfish.jersey.media:jersey-media-multipart'
       - 'org.hibernate:hibernate-ehcache'
       - 'org.hibernate:hibernate-java8'
-      - 'org.hibernate:hibernate-jpamodelgen'
       - 'org.hibernate:hibernate-validator-annotation-processor'
       - 'org.igniterealtime.smack:smack-resolver-javax'
       - 'org.infinispan:infinispan-cachestore-jdbc'
@@ -811,7 +810,7 @@ platform_definition:
     'com.jayway.jsonpath:json-path': '2.3.0'
     'com.rometools:rome': '1.7.4'
     'com.squareup.okhttp3:okhttp': '3.8.1'
-    'io.netty:netty-all': '4.1.22.Final'
+    'io.netty:netty-all': '4.1.24.Final'
     'javax.jdo:jdo-api': '3.1'
     'net.sourceforge.htmlunit:htmlunit': '2.23'
     'org.apache.wss4j:wss4j-ws-security-dom': '2.2'
