--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -140,53 +140,53 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.12.BUILD-SNAPSHOT
+      version: 1.5.12.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.12.BUILD-SNAPSHOT
+      version: 1.13.12.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.12.BUILD-SNAPSHOT
+      version: 2.2.12.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.12.BUILD-SNAPSHOT
+      version: 2.1.12.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.12.BUILD-SNAPSHOT
+      version: 1.1.12.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.12.BUILD-SNAPSHOT
+      version: 1.9.12.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.12.BUILD-SNAPSHOT
+      version: 1.11.12.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.12.BUILD-SNAPSHOT
+      version: 1.2.12.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.12.BUILD-SNAPSHOT
+      version: 1.0.12.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.12.BUILD-SNAPSHOT
+      version: 1.10.12.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -194,29 +194,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.12.BUILD-SNAPSHOT
+      version: 4.2.12.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.12.BUILD-SNAPSHOT
+      version: 1.8.12.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.12.BUILD-SNAPSHOT
+      version: 2.6.12.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.12.BUILD-SNAPSHOT
+      version: 2.1.12.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.17.BUILD-SNAPSHOT
+      version: 4.3.17.RELEASE
       modules:
         - spring-aop
         - spring-aspects
