--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -40,7 +40,7 @@
 	</developers>
 
 	<properties>
-		<spring-boot.version>2.0.3.RELEASE</spring-boot.version>
+		<spring-boot.version>2.0.4.BUILD-SNAPSHOT</spring-boot.version>
 	</properties>
 
 	<dependencies>
