--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.7.7.RELEASE
+      version: 1.7.8.RELEASE
       modules:
         - spring-amqp
         - spring-rabbit
@@ -129,7 +129,7 @@ platform_definition:
         - spring-boot-starter-web-services
     - name: Spring Cloud Connectors
       groupId: org.springframework.cloud
-      version: 1.2.5.RELEASE
+      version: 1.2.6.RELEASE
       modules:
         - spring-cloud-core
         - spring-cloud-cloudfoundry-connector
@@ -216,7 +216,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.17.RELEASE
+      version: 4.3.18.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -405,7 +405,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 1.3.2.RELEASE
+      version: 1.3.3.RELEASE
       modules:
         - spring-session
         - spring-session-data-gemfire
