Align with latest Spring Boot 1.5.14 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -216,7 +216,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.18.BUILD-SNAPSHOT
+      version: 4.3.18.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -811,7 +811,7 @@ platform_definition:
     'com.jayway.jsonpath:json-path': '2.3.0'
     'com.rometools:rome': '1.7.4'
     'com.squareup.okhttp3:okhttp': '3.8.1'
-    'io.netty:netty-all': '4.1.24.Final'
+    'io.netty:netty-all': '4.1.25.Final'
     'javax.jdo:jdo-api': '3.1'
     'net.sourceforge.htmlunit:htmlunit': '2.23'
     'org.apache.wss4j:wss4j-ws-security-dom': '2.2'
