--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -198,7 +198,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.7.BUILD-SNAPSHOT
+      version: 5.0.7.RELEASE
       modules:
         - spring-aop
         - spring-aspects
