--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -371,7 +371,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.2.7.BUILD-SNAPSHOT
+      version: 4.2.7.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
