--- a/scripts/configureRepositories.gradle
+++ b/scripts/configureRepositories.gradle
@@ -1,6 +1,6 @@
 allprojects {
 	repositories {
 		maven { url rootProject.file(repositoryDir) }
-		maven { url 'http://repo.spring.io/libs-snapshot' }
+		maven { url 'https://repo.spring.io/libs-snapshot' }
 	}
 }
