--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -304,7 +304,7 @@ platform_definition:
         - spring-plugin-metadata
     - name: Spring REST Docs
       groupId: org.springframework.restdocs
-      version: 2.0.2.BUILD-SNAPSHOT
+      version: 2.0.2.RELEASE
       modules:
         - spring-restdocs-asciidoctor
         - spring-restdocs-core
