--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -14,7 +14,7 @@ platform_definition:
         - reactor-core
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.5.RELEASE
+      version: 2.0.6.BUILD-SNAPSHOT
       modules:
         - spring-amqp
         - spring-rabbit
