--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -141,53 +141,53 @@ platform_definition:
         checkout: v1.2.6.BUILD
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.14.RELEASE
+      version: 1.5.15.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.14.RELEASE
+      version: 1.13.15.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.14.RELEASE
+      version: 2.2.15.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.14.RELEASE
+      version: 2.1.15.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.14.RELEASE
+      version: 1.1.15.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.14.RELEASE
+      version: 1.9.15.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.14.RELEASE
+      version: 1.11.15.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.14.RELEASE
+      version: 1.2.15.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.14.RELEASE
+      version: 1.0.15.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.14.RELEASE
+      version: 1.10.15.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -195,29 +195,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.14.RELEASE
+      version: 4.2.15.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.14.RELEASE
+      version: 1.8.15.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.14.RELEASE
+      version: 2.6.15.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.14.RELEASE
+      version: 2.1.15.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.18.RELEASE
+      version: 4.3.19.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -372,7 +372,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.2.7.RELEASE
+      version: 4.2.8.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -812,12 +812,14 @@ platform_definition:
     'com.jayway.jsonpath:json-path': '2.3.0'
     'com.rometools:rome': '1.7.4'
     'com.squareup.okhttp3:okhttp': '3.8.1'
-    'io.netty:netty-all': '4.1.25.Final'
+    'io.netty:netty-all': '4.1.29.Final'
     'javax.jdo:jdo-api': '3.1'
     'net.sourceforge.htmlunit:htmlunit': '2.23'
     'org.apache.wss4j:wss4j-ws-security-dom': '2.2'
+    'org.bouncycastle:bcpkix-jdk15on': '1.60'
     'org.beanshell:bsh': '2.0b5'
     'org.hibernate:hibernate-core': '5.2.10.Final'
+    'org.projectlombok:lombok': '1.18.2'
     'org.seleniumhq.selenium:htmlunit-driver': '2.23.2'
     'org.webjars:hal-browser': '3325375'
   repositories:
