Align with latest Spring Boot 2.0.5 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,7 +9,7 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.1.8.RELEASE
+      version: 3.1.9.RELEASE
       modules:
         - reactor-core
     - name: Spring AMQP
@@ -119,86 +119,86 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.9.RELEASE
+      version: 3.0.10.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.9.RELEASE
+      version: 3.0.10.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data GemFire
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data Geode
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-geode
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.9.RELEASE
+      version: 5.0.10.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.9.RELEASE
+      version: 2.0.10.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.9.RELEASE
+      version: 3.0.10.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.9.RELEASE
+      version: 3.0.10.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.8.RELEASE
+      version: 5.0.9.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -228,7 +228,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.7.RELEASE
+      version: 5.0.8.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         runTestsWith:
@@ -272,7 +272,7 @@ platform_definition:
         - spring-integration-zookeeper
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.1.8.RELEASE
+      version: 2.1.9.RELEASE
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -355,7 +355,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.5.RELEASE
+      version: 2.0.6.BUILD-SNAPSHOT
       modules:
         - spring-session-core
         - spring-session-data-redis
@@ -367,17 +367,17 @@ platform_definition:
         tagPrefix:
     - name: Spring Session Data GemFire
       groupId: org.springframework.session
-      version: 2.0.3.RELEASE
+      version: 2.0.5.RELEASE
       modules:
         - spring-session-data-gemfire
     - name: Spring Session Data Geode
       groupId: org.springframework.session
-      version: 2.0.3.RELEASE
+      version: 2.0.5.RELEASE
       modules:
         - spring-session-data-gemfire
     - name: Spring Session Data MongoDB
       groupId: org.springframework.session
-      version: 2.0.2.RELEASE
+      version: 2.0.3.RELEASE
       modules:
         - spring-session-data-mongodb
     - name: Spring Social
@@ -875,11 +875,11 @@ platform_definition:
     'net.sourceforge.htmlunit:htmlunit': '2.31'
     'org.apache.derby:derby': '10.14.2.0'
     'org.apache.derby:derbyclient': '10.14.2.0'
-    'org.apache.logging.log4j:log4j-api': '2.11'
+    'org.apache.logging.log4j:log4j-api': '2.11.1'
     'org.aspectj:aspectjrt': '1.9.1'
     'org.aspectj:aspectjweaver': '1.9.1'
     'org.bouncycastle:bcpkix-jdk15on': '1.60'
-    'org.projectlombok:lombok': '1.18.0'
+    'org.projectlombok:lombok': '1.18.2'
     'org.seleniumhq.selenium:htmlunit-driver': '3.11.0'
     'org.seleniumhq.selenium:selenium-java': '3.13.0'
     'org.yaml:snakeyaml': '1.20'
