--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -40,7 +40,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 2.0.8.RELEASE
+      version: 2.0.9.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
