Align with latest Spring Boot 2.0.6 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -459,10 +459,8 @@ platform_definition:
       # that both it and the rest of the Platform do not depend upon directly
       - 'ch.qos.logback:logback-access'
       - 'ch.qos.logback:logback-core'
-      - 'com.github.ben-manes.caffeine:guava'
-      - 'com.github.ben-manes.caffeine:jcache'
-      - 'com.github.ben-manes.caffeine:simulator'
       - 'com.datastax.cassandra:cassandra-driver-mapping'
+      - 'com.fasterxml:classmate'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-avro'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-ion'
@@ -498,7 +496,9 @@ platform_definition:
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.10'
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.11'
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.12'
-      - 'com.fasterxml:classmate'
+      - 'com.github.ben-manes.caffeine:guava'
+      - 'com.github.ben-manes.caffeine:jcache'
+      - 'com.github.ben-manes.caffeine:simulator'
       - 'com.google.appengine:appengine-api-1.0-sdk'
       - 'com.google.protobuf:protobuf-java'
       - 'com.hazelcast:hazelcast-hibernate52'
@@ -520,8 +520,8 @@ platform_definition:
       - 'io.dropwizard.metrics:metrics-jersey'
       - 'io.dropwizard.metrics:metrics-jersey2'
       - 'io.dropwizard.metrics:metrics-jetty8'
-      - 'io.dropwizard.metrics:metrics-jetty9'
       - 'io.dropwizard.metrics:metrics-jetty9-legacy'
+      - 'io.dropwizard.metrics:metrics-jetty9'
       - 'io.dropwizard.metrics:metrics-json'
       - 'io.dropwizard.metrics:metrics-jvm'
       - 'io.dropwizard.metrics:metrics-log4j'
@@ -530,8 +530,9 @@ platform_definition:
       - 'io.dropwizard.metrics:metrics-servlet'
       - 'io.dropwizard.metrics:metrics-servlets'
       - 'io.javaslang:javaslang-match'
+      - 'io.micrometer:micrometer-jersey2'
       - 'io.micrometer:micrometer-registry-cloudwatch'
-      - 'io.netty:netty-codec'
+      - 'io.micrometer:micrometer-test'
       - 'io.netty:netty-codec-dns'
       - 'io.netty:netty-codec-haproxy'
       - 'io.netty:netty-codec-http'
@@ -543,14 +544,14 @@ platform_definition:
       - 'io.netty:netty-codec-socks'
       - 'io.netty:netty-codec-stomp'
       - 'io.netty:netty-codec-xml'
+      - 'io.netty:netty-codec'
       - 'io.netty:netty-common'
       - 'io.netty:netty-dev-tools'
       - 'io.netty:netty-example'
-      - 'io.netty:netty-handler'
       - 'io.netty:netty-handler-proxy'
-      - 'io.netty:netty-resolver'
+      - 'io.netty:netty-handler'
       - 'io.netty:netty-resolver-dns'
-      - 'io.netty:netty-transport'
+      - 'io.netty:netty-resolver'
       - 'io.netty:netty-transport-native-epoll'
       - 'io.netty:netty-transport-native-kqueue'
       - 'io.netty:netty-transport-native-unix-common'
@@ -558,14 +559,15 @@ platform_definition:
       - 'io.netty:netty-transport-sctp'
       - 'io.netty:netty-transport-udt'
       - 'io.netty:netty-transport-unix-common'
+      - 'io.netty:netty-transport'
       - 'io.pivotal.gemfire:geode-common'
       - 'io.pivotal.gemfire:geode-json'
       - 'io.pivotal.gemfire:geode-junit'
       - 'io.pivotal.gemfire:geode-old-client-support'
       - 'io.pivotal.gemfire:geode-pulse'
       - 'io.pivotal.gemfire:geode-rebalancer'
-      - 'io.pivotal.gemfire:geode-web'
       - 'io.pivotal.gemfire:geode-web-api'
+      - 'io.pivotal.gemfire:geode-web'
       - 'io.projectreactor.addons:reactor-adapter'
       - 'io.projectreactor.addons:reactor-extra'
       - 'io.projectreactor.addons:reactor-logback'
@@ -576,13 +578,12 @@ platform_definition:
       - 'io.rest-assured:scala-support'
       - 'io.rest-assured:spring-mock-mvc'
       - 'io.rest-assured:xml-path'
-      - 'javax.json:javax.json-api'
       - 'javax.servlet:jstl'
       - 'mysql:mysql-connector-java'
-      - 'net.bytebuddy:byte-buddy'
       - 'net.bytebuddy:byte-buddy-agent'
-      - 'net.java.dev.jna:jna'
+      - 'net.bytebuddy:byte-buddy'
       - 'net.java.dev.jna:jna-platform'
+      - 'net.java.dev.jna:jna'
       - 'net.sourceforge.jtds:jtds'
       - 'org.apache.activemq:activemq-amqp'
       - 'org.apache.activemq:activemq-blueprint'
@@ -610,8 +611,8 @@ platform_definition:
       - 'org.apache.activemq:activemq-shiro'
       - 'org.apache.activemq:activemq-spring'
       - 'org.apache.activemq:activemq-stomp'
-      - 'org.apache.activemq:activemq-web'
       - 'org.apache.activemq:activemq-web-console'
+      - 'org.apache.activemq:activemq-web'
       - 'org.apache.activemq:artemis-amqp-protocol'
       - 'org.apache.activemq:artemis-commons'
       - 'org.apache.activemq:artemis-core-client'
@@ -626,23 +627,29 @@ platform_definition:
       - 'org.apache.geode:geode-old-client-support'
       - 'org.apache.geode:geode-pulse'
       - 'org.apache.geode:geode-rebalancer'
-      - 'org.apache.geode:geode-web'
       - 'org.apache.geode:geode-web-api'
+      - 'org.apache.geode:geode-web'
       - 'org.apache.httpcomponents:fluent-hc'
       - 'org.apache.httpcomponents:httpclient-cache'
       - 'org.apache.httpcomponents:httpclient-osgi'
       - 'org.apache.httpcomponents:httpclient-win'
-      - 'org.apache.httpcomponents:httpcore'
       - 'org.apache.httpcomponents:httpcore-nio'
+      - 'org.apache.httpcomponents:httpcore'
+      - 'org.apache.johnzon:johnzon-core'
+      - 'org.apache.johnzon:johnzon-jaxrs'
+      - 'org.apache.johnzon:johnzon-jsonb-extras'
       - 'org.apache.johnzon:johnzon-jsonb'
+      - 'org.apache.johnzon:johnzon-jsonschema'
+      - 'org.apache.johnzon:johnzon-mapper'
+      - 'org.apache.johnzon:johnzon-websocket'
       - 'org.apache.kafka:connect-api'
       - 'org.apache.kafka:connect-file'
       - 'org.apache.kafka:connect-json'
       - 'org.apache.kafka:connect-runtime'
       - 'org.apache.kafka:connect-transforms'
+      - 'org.apache.kafka:kafka_2.12'
       - 'org.apache.kafka:kafka-log4j-appender'
       - 'org.apache.kafka:kafka-tools'
-      - 'org.apache.kafka:kafka_2.12'
       - 'org.apache.logging.log4j:log4j-1.2-api'
       - 'org.apache.logging.log4j:log4j-api-scala_2.10'
       - 'org.apache.logging.log4j:log4j-api-scala_2.11'
@@ -657,18 +664,18 @@ platform_definition:
       - 'org.apache.logging.log4j:log4j-nosql'
       - 'org.apache.logging.log4j:log4j-taglib'
       - 'org.apache.logging.log4j:log4j-web'
-      - 'org.apache.openjpa:openjpa'
       - 'org.apache.openjpa:openjpa-persistence-jdbc'
-      - 'org.apache.poi:poi'
+      - 'org.apache.openjpa:openjpa'
       - 'org.apache.poi:poi-scratchpad'
+      - 'org.apache.poi:poi'
       - 'org.apache.shiro:shiro-core'
       - 'org.apache.shiro:shiro-web'
       - 'org.apache.solr:solr-analysis-extras'
       - 'org.apache.solr:solr-analytics'
       - 'org.apache.solr:solr-cell'
       - 'org.apache.solr:solr-clustering'
-      - 'org.apache.solr:solr-dataimporthandler'
       - 'org.apache.solr:solr-dataimporthandler-extras'
+      - 'org.apache.solr:solr-dataimporthandler'
       - 'org.apache.solr:solr-langid'
       - 'org.apache.solr:solr-map-reduce'
       - 'org.apache.solr:solr-morphlines-cell'
@@ -701,26 +708,6 @@ platform_definition:
       - 'org.codehaus.jackson:jackson-core-asl'
       - 'org.codehaus.janino:janino'
       - 'org.eclipse.jdt.core.compiler:ecj'
-      - 'org.eclipse.jetty.cdi:cdi-core'
-      - 'org.eclipse.jetty.cdi:cdi-full-servlet'
-      - 'org.eclipse.jetty.cdi:cdi-servlet'
-      - 'org.eclipse.jetty.fcgi:fcgi-client'
-      - 'org.eclipse.jetty.fcgi:fcgi-server'
-      - 'org.eclipse.jetty.gcloud:jetty-gcloud-session-manager'
-      - 'org.eclipse.jetty.http2:http2-client'
-      - 'org.eclipse.jetty.http2:http2-common'
-      - 'org.eclipse.jetty.http2:http2-hpack'
-      - 'org.eclipse.jetty.http2:http2-http-client-transport'
-      - 'org.eclipse.jetty.memcached:jetty-memcached-sessions'
-      - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
-      - 'org.eclipse.jetty.osgi:jetty-httpservice'
-      - 'org.eclipse.jetty.osgi:jetty-osgi-boot'
-      - 'org.eclipse.jetty.osgi:jetty-osgi-boot-jsp'
-      - 'org.eclipse.jetty.osgi:jetty-osgi-boot-warurl'
-      - 'org.eclipse.jetty.websocket:javax-websocket-client-impl'
-      - 'org.eclipse.jetty.websocket:websocket-api'
-      - 'org.eclipse.jetty.websocket:websocket-common'
-      - 'org.eclipse.jetty.websocket:websocket-servlet'
       - 'org.eclipse.jetty:apache-jsp'
       - 'org.eclipse.jetty:apache-jstl'
       - 'org.eclipse.jetty:jetty-alpn-client'
@@ -737,8 +724,8 @@ platform_definition:
       - 'org.eclipse.jetty:jetty-distribution'
       - 'org.eclipse.jetty:jetty-hazelcast'
       - 'org.eclipse.jetty:jetty-home'
-      - 'org.eclipse.jetty:jetty-http'
       - 'org.eclipse.jetty:jetty-http-spi'
+      - 'org.eclipse.jetty:jetty-http'
       - 'org.eclipse.jetty:jetty-infinispan'
       - 'org.eclipse.jetty:jetty-io'
       - 'org.eclipse.jetty:jetty-jaas'
@@ -760,6 +747,26 @@ platform_definition:
       - 'org.eclipse.jetty:jetty-unixsocket'
       - 'org.eclipse.jetty:jetty-util-ajax'
       - 'org.eclipse.jetty:jetty-xml'
+      - 'org.eclipse.jetty.cdi:cdi-core'
+      - 'org.eclipse.jetty.cdi:cdi-full-servlet'
+      - 'org.eclipse.jetty.cdi:cdi-servlet'
+      - 'org.eclipse.jetty.fcgi:fcgi-client'
+      - 'org.eclipse.jetty.fcgi:fcgi-server'
+      - 'org.eclipse.jetty.gcloud:jetty-gcloud-session-manager'
+      - 'org.eclipse.jetty.http2:http2-client'
+      - 'org.eclipse.jetty.http2:http2-common'
+      - 'org.eclipse.jetty.http2:http2-hpack'
+      - 'org.eclipse.jetty.http2:http2-http-client-transport'
+      - 'org.eclipse.jetty.memcached:jetty-memcached-sessions'
+      - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
+      - 'org.eclipse.jetty.osgi:jetty-httpservice'
+      - 'org.eclipse.jetty.osgi:jetty-osgi-boot-jsp'
+      - 'org.eclipse.jetty.osgi:jetty-osgi-boot-warurl'
+      - 'org.eclipse.jetty.osgi:jetty-osgi-boot'
+      - 'org.eclipse.jetty.websocket:javax-websocket-client-impl'
+      - 'org.eclipse.jetty.websocket:websocket-api'
+      - 'org.eclipse.jetty.websocket:websocket-common'
+      - 'org.eclipse.jetty.websocket:websocket-servlet'
       - 'org.eclipse.persistence:org.eclipse.persistence.core'
       - 'org.ehcache:ehcache-clustered'
       - 'org.ehcache:ehcache-transactions'
@@ -774,7 +781,6 @@ platform_definition:
       - 'org.glassfish.jersey.media:jersey-media-jaxb'
       - 'org.glassfish.jersey.media:jersey-media-multipart'
       - 'org.hdrhistogram:HdrHistogram'
-      - 'org.hibernate.validator:hibernate-validator-annotation-processor'
       - 'org.hibernate:hibernate-c3p0'
       - 'org.hibernate:hibernate-hikaricp'
       - 'org.hibernate:hibernate-infinispan'
@@ -784,6 +790,7 @@ platform_definition:
       - 'org.hibernate:hibernate-spatial'
       - 'org.hibernate:hibernate-testing'
       - 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api'
+      - 'org.hibernate.validator:hibernate-validator-annotation-processor'
       - 'org.igniterealtime.smack:smack-resolver-javax'
       - 'org.infinispan:infinispan-cachestore-jdbc'
       - 'org.infinispan:infinispan-cachestore-jpa'
@@ -801,8 +808,8 @@ platform_definition:
       - 'org.infinispan:infinispan-commons'
       - 'org.infinispan:infinispan-core'
       - 'org.infinispan:infinispan-directory-provider'
-      - 'org.infinispan:infinispan-embedded'
       - 'org.infinispan:infinispan-embedded-query'
+      - 'org.infinispan:infinispan-embedded'
       - 'org.infinispan:infinispan-hibernate-cache'
       - 'org.infinispan:infinispan-jcache-commons'
       - 'org.infinispan:infinispan-jcache-remote'
@@ -811,11 +818,11 @@ platform_definition:
       - 'org.infinispan:infinispan-osgi'
       - 'org.infinispan:infinispan-persistence-cli'
       - 'org.infinispan:infinispan-persistence-soft-index'
-      - 'org.infinispan:infinispan-query'
       - 'org.infinispan:infinispan-query-dsl'
-      - 'org.infinispan:infinispan-remote'
+      - 'org.infinispan:infinispan-query'
       - 'org.infinispan:infinispan-remote-query-client'
       - 'org.infinispan:infinispan-remote-query-server'
+      - 'org.infinispan:infinispan-remote'
       - 'org.infinispan:infinispan-scripting'
       - 'org.infinispan:infinispan-server-core'
       - 'org.infinispan:infinispan-server-hotrod'
@@ -825,8 +832,8 @@ platform_definition:
       - 'org.infinispan:infinispan-spring'
       - 'org.infinispan:infinispan-spring4-common'
       - 'org.infinispan:infinispan-spring4-remote'
-      - 'org.infinispan:infinispan-tasks'
       - 'org.infinispan:infinispan-tasks-api'
+      - 'org.infinispan:infinispan-tasks'
       - 'org.infinispan:infinispan-tools'
       - 'org.infinispan:infinispan-tree'
       - 'org.javassist:javassist'
