--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -364,6 +364,7 @@ platform_definition:
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-session
+        branch: 2.0.x
         tagPrefix:
     - name: Spring Session Data GemFire
       groupId: org.springframework.session
